[project]
name = "example-memory"
version = "0.1.0"
description = "Session persistence node for Tagentacle — subscribes /memory/latest and saves to disk"
requires-python = ">=3.10"
dependencies = [
    "tagentacle-py-core>=0.1.0",
]

[tool.uv.sources]
tagentacle-py-core = { path = "../tagentacle-py-core", editable = true }
